<resources>
    <string name="app_name">EDC SMK</string>
    <string name="tut_wuri_handayani_logo">Tut Wuri Handayani Logo</string>
    <string name="sekolah_menengah_kejuruan">Sekolah Menengah Kejuruan</string>
    <string name="bisnis_dan_manajemen">Bisnis dan Manajemen</string>
    <string name="menu">Menu</string>
    <string name="jl_peterongansari_no_2_semarang">Jl. PETERONGANSARI NO. 2 SEMARANG</string>
    <string name="jawa_tengah">JAWA TENGAH</string>
    <string name="smkn_9_semarang">SMKN 9 SEMARANG</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="button_title">Button Title</string>
    <string name="button_subtitle">Button Subtitle</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="tap_card_nfc">TAP CARD / NFC</string>
    <string name="please_tap_card_before_the_time_runs_out">Please tap card before the time runs out</string>
    <string name="sale">SALE</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="please_enter_the_amount_of_money_you_want_to_pay">Please enter the amount of money you want to pay</string>
    <string name="rp_0">Rp. 0</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="ok">Ok</string>
    <string name="ok_icon">Ok Icon</string>
    <string name="re_print_receipt">Re-print Receipt</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="hoooray_your_payment_of_rp_100_000_is_successful">Hoooray! Your payment of Rp. 100.000 is successful!</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="please_enter_your_pin_to_processed">Please enter your PIN to processed</string>
    <string name="settlements">Settlements</string>
    <string name="total">TOTAL</string>
    <string name="abort">Abort</string>
    <string name="enter_trace_id">Enter Trace ID</string>
    <string name="home_icon">Home Icon</string>
    <string name="trace_id">00001</string>
    <string name="void_detail">Void Detail</string>
    <string name="text_void">Void</string>
    <string name="edc_no_493_24_type_ib1">EDC NO.493.24 TYPE.IB1</string>
    <string name="edc_date">23-11-2022</string>
    <string name="terminal_id">TERMINAL ID : 000000</string>
    <string name="merchant_id">MERCHANT ID : 00000000000</string>
    <string name="date_2023_06_12">DATE : 2023-06-12</string>
    <string name="time_10_16">TIME : 10:16</string>
    <string name="trace_id_1">TRACE ID : 1</string>
    <string name="batch_00000">BATCH# : 00000</string>
    <string name="card_no_0000000">CARD NO : 0000000</string>
    <string name="void_sale">VOID SALE</string>
    <string name="amount">AMOUNT</string>
    <string name="abort_acknowledge">CARDHOLDER ACKNOWLEDGE RECEIPT OF GOODS AND SERVICES AND AGRESS TO PAY THE TOTAL SHOWN HERE</string>
    <string name="customer_copy">**CUSTOMER COPY**</string>
    <string name="trace_id_placeholder">TRACE ID: %d</string>
    <string name="date_placeholder">DATE : %s</string>
    <string name="time_placeholder">TIME : %s</string>
    <string name="card_id_placeholder">CARD NO : %s</string>
    <string name="your_void_of_1_was_successful">Your void of #1 was successful.</string>
    <string name="void_successful">Void Successful</string>
    <string name="void_successful_message">Your void of #%1$d was successful.</string>
    <string name="transactions">Transactions</string>
    <string name="no_1">No. 1</string>
    <string name="card_transaction">Card Transaction</string>
    <string name="_2023_01_01_00_00_00">2023-01-01 00:00:00</string>
    <string name="rp_5_000_000">Rp. 5.000.000</string>
    <string name="reprint">Reprint</string>

    <string name="print_display">Display Mode</string>
    <string name="print_text">Print Text</string>
    <string name="print_english">Print English</string>
    <string name="print_char">Print Char</string>
    <string name="print_picture">Print Picture</string>
    <string name="print_qrcode">Print QRcode</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="print_self_check">Print Self Check</string>
    <string name="print_init">Print Init</string>
    <string name="print_query_length">Print Query Length</string>
    <string name="print_three_lines">Print three Lines</string>
    <string name="print_black_block">Print Black Block</string>
    <string name="print_baidu_bill">Print Baidu Bill</string>
    <string name="print_meituan_bill">Print Meituan Bill</string>
    <string name="print_elemo_bill">Print Elemo Bill</string>
    <string name="print_koubei_bill">Print Koubei Bill</string>
    <string name="print_table">Print Table</string>
    <string name="print_multi_content_test">Print Multi Content Test</string>
    <string name="print_comprehensive_test">Print Comprehensive Test</string>
    <string name="print_sunmi_mode">SunMi Mode</string>
    <string name="print_Multithread_test">Print Multithread Test</string>
    <string name="loop_print_test">Loop Print Test</string>
    <string name="print_driver_error_test">Print Driver Error Test</string>
    <string name="print_wave_test">Print wave Test</string>
    <string name="motor_idling">Motor Idling 10000 Steps</string>
    <string name="print_commond_input">Print Commond Input</string>
    <string name="printer_run_paper_lines">Printer Run Paper</string>
    <string name="reset_motor_high_temp_status">Rest Moter Heigh Temp Status</string>
    <string name="out_of_paper">The printer is out of paper</string>
    <string name="exists_paper">The printer paper is ready</string>
    <string name="printer_is_working">The printer is working</string>
    <string name="printer_high_temp_alarm">Printer high temperature alarm</string>
    <string name="motor_high_temp_alarm">Motor high temperature alarm</string>
    <string name="printer_current_task_print_complete">The print task has been printed</string>
    <string name="printer_exception">Printer Exception</string>
    <string name="unknown_error">unknown status</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="exit">Exit</string>
    <string name="status_paid">STATUS : PAID</string>
</resources>